modificando el proyecto